lab2 refactor